substrate/frame/support/test/tests/construct_runtime_ui/missing_module_instance.stderr
error: expected identifier
  --> tests/construct_runtime_ui/missing_module_instance.rs:23:20
   |
23 |         system: System::<>,
   |                          ^
